--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -324,6 +324,9 @@ color-scheme: dark;
     --bs-btn-disabled-bg: var(--base-disabled-bg-tertiary);
     --bs-btn-disabled-border-color: var(--base-disabled-border-tertiary);
 }
+.hpx-100{
+    height: 100px;
+}
 .border-radius-10{
     border-radius: 10px;
 }
@@ -349,27 +352,24 @@ color-scheme: dark;
     background-color: rgba(var(--base-bg-tertiary-rgb), var(--bs-bg-opacity)) !important;
 }
 .menu-vertical {
-    max-height: 0;
-    opacity: 0;
-    visibility: hidden;
-    overflow: hidden;
-    width:0px;
-    transition: max-height 0.5s ease, opacity 0.5s ease, visibility 0.5s ease;
+    display: none;
 }
 .menu-vertical.show {
-    opacity: 1;
-    visibility: visible;
-    width: 30rem;
+    display: flex;
 }
 .menu-icon.hover {
     background-color: rgba(var(--base-bg-primary-rgb),0.3);
     border-radius: 10px;
+    cursor: pointer;
 }
 .menu-icon.block {
     background-color: rgba(var(--base-bg-primary-rgb),0.5);
     border-radius: 10px;
 }
 
+.dots:hover{
+    cursor: pointer;
+}
 *,
 *::before,
 *::after {
@@ -3162,39 +3162,37 @@ z-index: 4;
 }
 
 .btn {
---bs-btn-padding-x: 0.75rem;
---bs-btn-padding-y: 0.375rem;
---bs-btn-font-family: ;
---bs-btn-font-size: 1rem;
---bs-btn-font-weight: 400;
---bs-btn-line-height: 1.5;
---bs-btn-color: var(--bs-body-color);
---bs-btn-bg: transparent;
---bs-btn-border-width: var(--bs-border-width);
---bs-btn-border-color: transparent;
---bs-btn-border-radius: var(--bs-border-radius);
---bs-btn-hover-border-color: transparent;
---bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
---bs-btn-disabled-opacity: 0.65;
---bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
-display: inline-block;
-padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
-font-family: var(--bs-btn-font-family);
-font-size: var(--bs-btn-font-size);
-font-weight: var(--bs-btn-font-weight);
-line-height: var(--bs-btn-line-height);
-color: var(--bs-btn-color);
-text-align: center;
-text-decoration: none;
-vertical-align: middle;
-cursor: pointer;
--webkit-user-select: none;
--moz-user-select: none;
-user-select: none;
-border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
-border-radius: var(--bs-btn-border-radius);
-background-color: var(--bs-btn-bg);
-transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+    --bs-btn-padding-x: 0.75rem;
+    --bs-btn-padding-y: 0.375rem;
+    --bs-btn-font-family: ;
+    --bs-btn-font-size: 1rem;
+    --bs-btn-font-weight: 400;
+    --bs-btn-line-height: 1.5;
+    --bs-btn-border-width: var(--bs-border-width);
+    --bs-btn-border-color: transparent;
+    --bs-btn-border-radius: var(--bs-border-radius);
+    --bs-btn-hover-border-color: transparent;
+    --bs-btn-box-shadow: inset 0 1px 0 rgba(255, 255, 255, 0.15), 0 1px 1px rgba(0, 0, 0, 0.075);
+    --bs-btn-disabled-opacity: 0.65;
+    --bs-btn-focus-box-shadow: 0 0 0 0.25rem rgba(var(--bs-btn-focus-shadow-rgb), .5);
+    display: inline-block;
+    padding: var(--bs-btn-padding-y) var(--bs-btn-padding-x);
+    font-family: var(--bs-btn-font-family);
+    font-size: var(--bs-btn-font-size);
+    font-weight: var(--bs-btn-font-weight);
+    line-height: var(--bs-btn-line-height);
+    color: var(--bs-btn-color);
+    text-align: center;
+    text-decoration: none;
+    vertical-align: middle;
+    cursor: pointer;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    border: var(--bs-btn-border-width) solid var(--bs-btn-border-color);
+    border-radius: var(--bs-btn-border-radius);
+    background-color: var(--bs-btn-bg);
+    transition: color 0.15s ease-in-out, background-color 0.15s ease-in-out, border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
 }
 @media (prefers-reduced-motion: reduce) {
 .btn {
@@ -3823,8 +3821,9 @@ border: 0;
 border-radius: var(--bs-dropdown-item-border-radius, 0);
 }
 .dropdown-item:hover, .dropdown-item:focus {
-color: var(--bs-dropdown-link-hover-color);
-background-color: var(--bs-dropdown-link-hover-bg);
+    color: var( --base-color-primary);
+    background-color: var( --base-bg-primary);
+    cursor: pointer;
 }
 .dropdown-item.active, .dropdown-item:active {
 color: var(--bs-dropdown-link-active-color);
@@ -7865,7 +7864,7 @@ height: 75% !important;
 }
 
 .h-100 {
-height: 100% !important;
+    height: 100% !important;
 }
 
 .h-auto {
@@ -7880,16 +7879,20 @@ max-height: 100% !important;
 height: 100vh !important;
 }
 
+.vh-95 {
+    height: 95vh !important;
+}
+
 .min-vh-100 {
     min-height: 100vh !important;
 }
 
 .flex-fill {
-flex: 1 1 auto !important;
+    flex: 1 1 auto !important;
 }
 
 .flex-row {
-flex-direction: row !important;
+    flex-direction: row !important;
 }
 
 .flex-column {
@@ -8316,8 +8319,8 @@ padding-left: 1.5rem !important;
 }
 
 .px-5 {
-padding-right: 3rem !important;
-padding-left: 3rem !important;
+    padding-right: 3rem !important;
+    padding-left: 3rem !important;
 }
 
 .py-0 {
