--- a/pages/prenotazioni/planning.css
+++ b/pages/prenotazioni/planning.css
@@ -1,7 +1,9 @@
 .planning-date:hover{
     cursor: pointer;
 }
-
+.datepicker:hover{
+    cursor: pointer;
+}
 .planning-back:hover{
     background-color: rgba(var(--base-bg-primary-rgb),0.5);
     cursor: pointer;
