--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -7670,15 +7670,20 @@ position: sticky !important;
 }
 
 .top-0 {
-top: 0 !important;
+    top: 0 !important;
 }
-
+.top-10 {
+    top: 10% !important;
+}
+.top-30 {
+    top: 30% !important;
+}
 .top-50 {
-top: 50% !important;
+    top: 50% !important;
 }
 
 .top-100 {
-top: 100% !important;
+    top: 100% !important;
 }
 
 .bottom-0 {
