--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -370,6 +370,18 @@ color-scheme: dark;
 .bg-primary{
     background-color: var(--base-bg-primary);
 }
+.bg-primary-05{
+    background-color: rgba(var(--base-bg-primary-rgb),0.05);
+}
+.bg-primary-5{
+    background-color: rgba(var(--base-bg-primary-rgb),0.5);
+}
+.bg-primary-6{
+    background-color: rgba(var(--base-bg-primary-rgb),0.6);
+}
+.bg-primary-7{
+    background-color: rgba(var(--base-bg-primary-rgb),0.7);
+}
 .bg-secondary{
     background-color: var(--base-bg-secondary);
 }
