--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -487,6 +487,18 @@ color-scheme: dark;
     color:white;
     border-radius: 2px;
 }
+.hover:hover svg {
+    fill:var(--base-bg-tertiary);
+}
+.hover-white:hover, .hover:hover *{
+    cursor: pointer!important;
+    background-color: var(--base-bg-primary)!important;
+    color:white;
+    border-radius: 2px;
+}
+.hover-white:hover svg {
+    fill:white;
+}
 *,
 *::before,
 *::after {
@@ -7334,6 +7346,13 @@ left: 0;
 z-index: 1030;
 }
 
+.fixed-top-right {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 1030;
+}
+
 .fixed-bottom {
 position: fixed;
 right: 0;
@@ -7957,6 +7976,9 @@ border-width: 5px !important;
 }
 .w-15 {
     width: 15% !important;
+}
+.w-20 {
+    width: 20% !important;
 }
 .w-25 {
     width: 25% !important;
