--- a/components/hour-picker/hour-picker.css
+++ b/components/hour-picker/hour-picker.css
@@ -3,7 +3,10 @@
     display: flex;
     align-items: center;
     gap: 10px;
-    background-color: rgba(var(--base-bg-primary-rgb),0.5);
+    background: rgb(1,1,1);
+    background: linear-gradient(20deg, rgba(var(--base-bg-primary-rgb),0.5) 0%,rgba(var(--base-bg-primary-rgb),0.95) 40%,rgba(var(--base-bg-primary-rgb),0.98) 60%, rgba(var(--base-bg-primary-rgb),0.5) 100%);
+    border: solid var(--base-bg-primary) 4px!important;
+    border-radius: 10px!important;
 }
 .scroller {
     width: 80px;
@@ -30,8 +33,4 @@
 
 .separator {
     font-size: 2em;
-}
-
-.clean-btn:hover >svg, .close-btn:hover >svg{
-    fill:var(--base-bg-tertiary);
 }
