--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -181,46 +181,46 @@ color-scheme: dark;
 }
 [data-bs-theme=blue] {
     --base-color-primary: #fff;
-    --base-bg-primary: #105685;
+    --base-bg-primary: #0a363ee0;
     --base-bg-primary-rgb:16, 86, 133;
-    --base-border-primary: #5f6e8571;
+    --base-border-primary: #124b5b;
     --base-hover-color-primary: #fff;
-    --base-hover-bg-primary: #1481ca;
-    --base-hover-border-primary: #0a58ca;
+    --base-hover-bg-primary: #124b5bb6;
+    --base-hover-border-primary: #050505;
     --base-focus-shadow-primary: 49, 132, 253;
     --base-active-color-primary: #fff;
-    --base-active-bg-primary: #0a58ca;
-    --base-active-border-primary: #0a53be;
+    --base-active-bg-primary: #105685;
+    --base-active-border-primary: #124b5b;
     --base-active-shadow-primary: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --base-disabled-primary: #fff;
     --base-disabled-bg-primary: #105685;
-    --base-disabled-border-primary: #105685;
+    --base-disabled-border-primary: #124b5b;
     --base-color-secondary: #fff;
-    --base-bg-secondary: #102f85;
+    --base-bg-secondary: #0a363eb0;
     --base-bg-secondary-rgb: 16, 47, 133;
-    --base-border-secondary: #1443c5;
+    --base-border-secondary: #124b5b;
     --base-hover-color-secondary: #fff;
-    --base-hover-bg-secondary: #0b3e7f;
-    --base-hover-border-secondary: #0a3872;
+    --base-hover-bg-secondary: #124b5b75;
+    --base-hover-border-secondary: #124b5b;
     --base-focus-shadow-secondary: 16, 86, 133;
     --base-active-color-secondary: #fff;
-    --base-active-bg-secondary: #0a3e7f;
-    --base-active-border-secondary: #0a3872;
+    --base-active-bg-secondary: #2e8a9a;
+    --base-active-border-secondary: #124b5b;
     --base-active-shadow-secondary: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --base-disabled-secondary: #fff;
-    --base-disabled-bg-secondary: #105685;
-    --base-disabled-border-secondary: #105685;
+    --base-disabled-bg-secondary: #124b5b;
+    --base-disabled-border-secondary: #124b5b;
     --base-color-tertiary: #fff;
-    --base-bg-tertiary: #0800ff;
+    --base-bg-tertiary: #00af7a;
     --base-bg-tertiary-rgb: 8, 0, 255;
     --base-border-tertiary: #124b5b;
     --base-hover-color-tertiary: #fff;
-    --base-hover-bg-tertiary: #0e424f;
-    --base-hover-border-tertiary: #0b3b46;
+    --base-hover-bg-tertiary: #124b5b;
+    --base-hover-border-tertiary: #124b5b;
     --base-focus-shadow-tertiary: 18, 75, 91;
     --base-active-color-tertiary: #fff;
-    --base-active-bg-tertiary: #0a424f;
-    --base-active-border-tertiary: #0a3b46;
+    --base-active-bg-tertiary: #124b5b;
+    --base-active-border-tertiary: #124b5b;
     --base-active-shadow-tertiary: inset 0 3px 5px rgba(0, 0, 0, 0.125);
     --base-disabled-tertiary: #fff;
     --base-disabled-bg-tertiary: #124b5b;
@@ -5043,8 +5043,8 @@ color: var(--bs-breadcrumb-item-active-color);
 --bs-pagination-focus-bg: var(--bs-secondary-bg);
 --bs-pagination-focus-box-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
 --bs-pagination-active-color: #fff;
---bs-pagination-active-bg: #0d6efd;
---bs-pagination-active-border-color: #0d6efd;
+--bs-pagination-active-bg: var(--base-bg-tertiary);
+--bs-pagination-active-border-color: var(--base-bg-tertiary);
 --bs-pagination-disabled-color: var(--bs-secondary-color);
 --bs-pagination-disabled-bg: var(--bs-secondary-bg);
 --bs-pagination-disabled-border-color: var(--bs-border-color);
