--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -596,10 +596,6 @@ h6, .h6 {
     font-size: 1rem;
 }
 
-p {
-    margin-top: 0;
-    margin-bottom: 1rem;
-}
 
 abbr[title] {
     -webkit-text-decoration: underline dotted;
@@ -12367,6 +12363,13 @@ display: inline-flex !important;
 .d-print-none {
 display: none !important;
 }
+}
+
+
+p.psm {
+    margin-top: 0;
+    margin-bottom: 5px;
+
 }
 
 /*# sourceMappingURL=bootstrap.css.map */
