--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -5236,13 +5236,19 @@ color: var(--bs-alert-link-color);
 padding-right: 3rem;
 }
 .alert-dismissible .btn-close {
-position: absolute;
-top: 0;
-right: 0;
-z-index: 2;
-padding: 1.25rem 1rem;
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    padding: 1.25rem 1rem;
 }
-
+.alert-dismissible .btn-resize {
+    position: absolute;
+    top: 0;
+    right: 0;
+    z-index: 2;
+    padding: 1.25rem 1rem;
+}
 .alert-primary {
 --bs-alert-color: var(--bs-primary-text-emphasis);
 --bs-alert-bg: var(--bs-primary-bg-subtle);
@@ -5705,48 +5711,69 @@ border-bottom-width: 0;
 }
 
 .btn-close {
---bs-btn-close-color: #000;
---bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
---bs-btn-close-opacity: 0.5;
---bs-btn-close-hover-opacity: 0.75;
---bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
---bs-btn-close-focus-opacity: 1;
---bs-btn-close-disabled-opacity: 0.25;
---bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
-box-sizing: content-box;
-width: 1em;
-height: 1em;
-padding: 0.25em 0.25em;
-color: var(--bs-btn-close-color);
-background: transparent var(--bs-btn-close-bg) center/1em auto no-repeat;
-border: 0;
-border-radius: 0.375rem;
-opacity: var(--bs-btn-close-opacity);
+    --bs-btn-close-color: #000;
+    --bs-btn-close-bg: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M.293.293a1 1 0 0 1 1.414 0L8 6.586 14.293.293a1 1 0 1 1 1.414 1.414L9.414 8l6.293 6.293a1 1 0 0 1-1.414 1.414L8 9.414l-6.293 6.293a1 1 0 0 1-1.414-1.414L6.586 8 .293 1.707a1 1 0 0 1 0-1.414z'/%3e%3c/svg%3e");
+    --bs-btn-close-opacity: 0.5;
+    --bs-btn-close-hover-opacity: 0.75;
+    --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-btn-close-focus-opacity: 1;
+    --bs-btn-close-disabled-opacity: 0.25;
+    --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
+    box-sizing: content-box;
+    width: 1em;
+    height: 1em;
+    padding: 0.25em 0.25em;
+    color: var(--bs-btn-close-color);
+    background: transparent var(--bs-btn-close-bg) center/1em auto no-repeat;
+    border: 0;
+    border-radius: 0.375rem;
+    opacity: var(--bs-btn-close-opacity);
 }
-.btn-close:hover {
-color: var(--bs-btn-close-color);
-text-decoration: none;
-opacity: var(--bs-btn-close-hover-opacity);
+.btn-resize {
+    --bs-btn-close-color: #000;
+    --bs-btn-resize-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M1.5 1a.5.5 0 0 0-.5.5v4a.5.5 0 0 1-1 0v-4A1.5 1.5 0 0 1 1.5 0h4a.5.5 0 0 1 0 1zM10 .5a.5.5 0 0 1 .5-.5h4A1.5 1.5 0 0 1 16 1.5v4a.5.5 0 0 1-1 0v-4a.5.5 0 0 0-.5-.5h-4a.5.5 0 0 1-.5-.5M.5 10a.5.5 0 0 1 .5.5v4a.5.5 0 0 0 .5.5h4a.5.5 0 0 1 0 1h-4A1.5 1.5 0 0 1 0 14.5v-4a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v4a1.5 1.5 0 0 1-1.5 1.5h-4a.5.5 0 0 1 0-1h4a.5.5 0 0 0 .5-.5v-4a.5.5 0 0 1 .5-.5'/%3e%3c/svg%3e");
+    --bs-btn-fullscreen-icon: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='%23000'%3e%3cpath d='M5.828 10.172a.5.5 0 0 0-.707 0l-4.096 4.096V11.5a.5.5 0 0 0-1 0v3.975a.5.5 0 0 0 .5.5H4.5a.5.5 0 0 0 0-1H1.732l4.096-4.096a.5.5 0 0 0 0-.707m4.344 0a.5.5 0 0 1 .707 0l4.096 4.096V11.5a.5.5 0 1 1 1 0v3.975a.5.5 0 0 1-.5.5H11.5a.5.5 0 0 1 0-1h2.768l-4.096-4.096a.5.5 0 0 1 0-.707m0-4.344a.5.5 0 0 0 .707 0l4.096-4.096V4.5a.5.5 0 1 0 1 0V.525a.5.5 0 0 0-.5-.5H11.5a.5.5 0 0 0 0 1h2.768l-4.096 4.096a.5.5 0 0 0 0 .707m-4.344 0a.5.5 0 0 1-.707 0L1.025 1.732V4.5a.5.5 0 0 1-1 0V.525a.5.5 0 0 1 .5-.5H4.5a.5.5 0 0 1 0 1H1.732l4.096 4.096a.5.5 0 0 1 0 .707'/%3e%3c/svg%3e");
+    --bs-btn-resize-bg: var(--bs-btn-fullscreen-icon);
+    --bs-btn-close-opacity: 0.5;
+    --bs-btn-close-hover-opacity: 0.75;
+    --bs-btn-close-focus-shadow: 0 0 0 0.25rem rgba(13, 110, 253, 0.25);
+    --bs-btn-close-focus-opacity: 1;
+    --bs-btn-close-disabled-opacity: 0.25;
+    --bs-btn-close-white-filter: invert(1) grayscale(100%) brightness(200%);
+    box-sizing: content-box;
+    width: 1em;
+    height: 1em;
+    padding: 0.25em 0.25em;
+    color: var(--bs-btn-close-color);
+    background: transparent var(--bs-btn-resize-bg) center/1em auto no-repeat;
+    border: 0;
+    border-radius: 0.375rem;
+    opacity: var(--bs-btn-close-opacity);
 }
-.btn-close:focus {
-outline: 0;
-box-shadow: var(--bs-btn-close-focus-shadow);
-opacity: var(--bs-btn-close-focus-opacity);
+.btn-close:hover, .btn-resize:hover {
+    color: var(--bs-btn-close-color);
+    text-decoration: none;
+    opacity: var(--bs-btn-close-hover-opacity);
 }
-.btn-close:disabled, .btn-close.disabled {
-pointer-events: none;
--webkit-user-select: none;
--moz-user-select: none;
-user-select: none;
-opacity: var(--bs-btn-close-disabled-opacity);
+.btn-close:focus, .btn-resize:focus {
+    outline: 0;
+    box-shadow: var(--bs-btn-close-focus-shadow);
+    opacity: var(--bs-btn-close-focus-opacity);
+}
+.btn-close:disabled, .btn-resize.disabled {
+    pointer-events: none;
+    -webkit-user-select: none;
+    -moz-user-select: none;
+    user-select: none;
+    opacity: var(--bs-btn-close-disabled-opacity);
 }
 
 .btn-close-white {
-filter: var(--bs-btn-close-white-filter);
+    filter: var(--bs-btn-close-white-filter);
 }
 
 [data-bs-theme=dark] .btn-close {
-filter: var(--bs-btn-close-white-filter);
+    filter: var(--bs-btn-close-white-filter);
 }
 
 .toast {
@@ -5809,9 +5836,14 @@ border-top-left-radius: calc(var(--bs-toast-border-radius) - var(--bs-toast-bord
 border-top-right-radius: calc(var(--bs-toast-border-radius) - var(--bs-toast-border-width));
 }
 .toast-header .btn-close {
-margin-right: calc(-0.5 * var(--bs-toast-padding-x));
-margin-left: var(--bs-toast-padding-x);
+    margin-right: calc(-0.5 * var(--bs-toast-padding-x));
+    margin-left: var(--bs-toast-padding-x);
 }
+.toast-header .btn-resize {
+    margin-right: calc(-0.5 * var(--bs-toast-padding-x));
+    margin-left: var(--bs-toast-padding-x);
+}
+
 
 .toast-body {
 padding: var(--bs-toast-padding-x);
@@ -5925,17 +5957,25 @@ opacity: var(--bs-backdrop-opacity);
 }
 
 .modal-header {
-display: flex;
-flex-shrink: 0;
-align-items: center;
-padding: var(--bs-modal-header-padding);
-border-bottom: var(--bs-modal-header-border-width) solid var(--bs-modal-header-border-color);
-border-top-left-radius: var(--bs-modal-inner-border-radius);
-border-top-right-radius: var(--bs-modal-inner-border-radius);
+    display: flex;
+    flex-shrink: 0;
+    align-items: center;
+    padding: var(--bs-modal-header-padding);
+    border-bottom: var(--bs-modal-header-border-width) solid var(--bs-modal-header-border-color);
+    border-top-left-radius: var(--bs-modal-inner-border-radius);
+    border-top-right-radius: var(--bs-modal-inner-border-radius);
 }
 .modal-header .btn-close {
-padding: calc(var(--bs-modal-header-padding-y) * 0.5) calc(var(--bs-modal-header-padding-x) * 0.5);
-margin: calc(-0.5 * var(--bs-modal-header-padding-y)) calc(-0.5 * var(--bs-modal-header-padding-x)) calc(-0.5 * var(--bs-modal-header-padding-y)) auto;
+    padding: calc(var(--bs-modal-header-padding-y) * 0.5) calc(var(--bs-modal-header-padding-x) * 0.5);
+    margin: calc(-0.5 * var(--bs-modal-header-padding-y)) calc(-0.5 * var(--bs-modal-header-padding-x)) calc(-0.5 * var(--bs-modal-header-padding-y)) auto;
+}
+
+.modal-header .btn-resize {
+    position: absolute;
+    top: var(--bs-modal-header-padding-y);
+    right: calc(3*var(--bs-modal-header-padding-x));
+    z-index: 2;
+    padding: 0.6rem 0.6rem;
 }
 
 .modal-title {
@@ -7128,6 +7168,11 @@ padding: var(--bs-offcanvas-padding-y) var(--bs-offcanvas-padding-x);
 .offcanvas-header .btn-close {
 padding: calc(var(--bs-offcanvas-padding-y) * 0.5) calc(var(--bs-offcanvas-padding-x) * 0.5);
 margin: calc(-0.5 * var(--bs-offcanvas-padding-y)) calc(-0.5 * var(--bs-offcanvas-padding-x)) calc(-0.5 * var(--bs-offcanvas-padding-y)) auto;
+}
+
+.offcanvas-header .btn-resize {
+    padding: calc(var(--bs-offcanvas-padding-y) * 0.5) calc(var(--bs-offcanvas-padding-x) * 0.5);
+    margin: calc(-0.5 * var(--bs-offcanvas-padding-y)) calc(-0.5 * var(--bs-offcanvas-padding-x)) calc(-0.5 * var(--bs-offcanvas-padding-y)) auto;
 }
 
 .offcanvas-title {
