--- a/modal_component/prenota_seduta/prenota_seduta.css
+++ b/modal_component/prenota_seduta/prenota_seduta.css
@@ -7,16 +7,9 @@ div.calendar {
 }
 div.calendar-out{
     background-color: rgba(var(--base-bg-primary-rgb),0.04);
-    border-bottom: solid rgba(var(--base-bg-primary-rgb),0.2) 0.01rem;
 }
 div.calendar-in{
     background-color: transparent;
-    border-right: solid rgba(var(--base-bg-primary-rgb),0.2) 0.01rem;
-    border-bottom: solid rgba(var(--base-bg-primary-rgb),0.2) 0.01rem;
-}
-div.first{
-    border-top: solid rgba(var(--base-bg-primary-rgb),0.2) 0.01rem;
-    border-left: solid rgba(var(--base-bg-primary-rgb),0.2) 0.01rem;
 }
 div.calendar-in:hover{
     background-color: rgba(var(--base-bg-primary-rgb),0.2);
@@ -29,11 +22,18 @@ div.calendar-current{
     flex: 0 0 auto;
     width: 14%;
     padding: 0.5rem;
+    border-right: solid rgba(var(--base-bg-primary-rgb),0.3) 0.01px;
+    border-bottom: solid rgba(var(--base-bg-primary-rgb),0.3) 0.01px;
+    font-size: 1.2rem;
+    cursor: pointer;
 }
-.c2{
-    flex: 0 0 auto;
-    width: 14%;
-    padding: 0.5rem;
+.day-name{
+    background-color: var(--base-bg-primary);
+    color: white;
+    
+}
+.day-name:not(:last-child){
+    border-right: solid white 1px;
 }
 .day-name::after {
     content: attr(data-full);
