--- a/assets/css/bootstrap-5.3.3.css
+++ b/assets/css/bootstrap-5.3.3.css
@@ -188,7 +188,7 @@ color-scheme: dark;
     --base-bg-primary-rgb:27, 81, 117;
     --base-border-primary: #124b5b;
     --base-hover-color-primary: #fff;
-    --base-hover-bg-primary: #124b5bb6;
+    --base-hover-bg-primary: #1b517566;
     --base-hover-border-primary: #050505;
     --base-focus-shadow-primary: 49, 132, 253;
     --base-active-color-primary: #fff;
@@ -203,7 +203,7 @@ color-scheme: dark;
     --base-bg-secondary-rgb: 47, 95, 114;
     --base-border-secondary: #2f5772;
     --base-hover-color-secondary: #fff;
-    --base-hover-bg-secondary: #2f5772;
+    --base-hover-bg-secondary: #2f5f7266;
     --base-hover-border-secondary: #124b5b;
     --base-focus-shadow-secondary: 16, 86, 133;
     --base-active-color-secondary: #fff;
@@ -218,7 +218,7 @@ color-scheme: dark;
     --base-bg-tertiary-rgb: 3, 33, 205;
     --base-border-tertiary: #124b5b;
     --base-hover-color-tertiary: #fff;
-    --base-hover-bg-tertiary: #124b5b;
+    --base-hover-bg-tertiary: #0322ce66;
     --base-hover-border-tertiary: #124b5b;
     --base-focus-shadow-tertiary: 18, 75, 91;
     --base-active-color-tertiary: #fff;
