--- a/modal_component/prenota_seduta/prenota_seduta.css
+++ b/modal_component/prenota_seduta/prenota_seduta.css
@@ -6,7 +6,7 @@ div.calendar {
     text-align: center;
 }
 div.calendar-out{
-    background-color: rgba(var(--base-bg-primary-rgb),0.04);
+    background-color: rgba(var(--base-bg-primary-rgb),0.5)!important;
 }
 div.calendar-in{
     background-color: transparent;
@@ -37,6 +37,9 @@ div.calendar-current{
 }
 .day-name::after {
     content: attr(data-full);
+}
+.passed{
+    background-color: rgba(var(--base-bg-primary-rgb),0.5)!important;
 }
 @media (max-width: 991.98px) {
     .day-name::after {
